--- a/index.html
+++ b/index.html
@@ -1,8 +1,18 @@
 <!DOCTYP html>
 <html>
+  <head>
     <title><b>Кошки</b></title><br>
+  </head>
   <body>
     <h1>По данным 2017 год в мире насчитывается <em>41 вид</em> кошек.</h1><br>
     <h1><b>Я рассскажу о 3 самых больших породах!</b></h1>
+    <ol>
+      <li>мейн-куна</li>
+      <li>чаузи</li>
+      <li>саванну</li>
+    </ol>
+    <hr>
+    <h1>1.Майн-куна</h1><br>
+    <h1>Крупнейшая порода кошек, самцы весят от 5,9 до 8,2 кг</h1><br>
   </body>
 </html>
