--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title><b>Кошки</b></title><br>
   </head>
   <body>
-    <h1>По данным 2017 год в мире насчитывается <em>41 вид</em> кошек.</h1><br>
+    <h1><small>По данным 2017 год в мире насчитывается <em>41 вид</em> кошек.</small></h1><br>
     <h1><b>Я рассскажу о 3 самых больших породах!</b></h1>
     <ol>
       <li>мейн-куна</li>
