--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYP html>
 <html>
   <head>
-    <title><b>Кошки</b></title><br>
+    <h1><b>Кошки</b></h1><br>
   </head>
   <body>
-    <h1><small>По данным 2017 год в мире насчитывается <em>41 вид</em> кошек.</small></h1><br>
+    <p><small>По данным 2017 год в мире насчитывается <em>41 вид</em> кошек.</small></p><br>
     <h1><b>Я рассскажу о 3 самых больших породах!</b></h1>
     <ol>
       <li>мейн-куна</li>
@@ -12,7 +12,7 @@
       <li>саванну</li>
     </ol>
     <hr>
-    <h1>1.Майн-куна</h1><br>
-    <h1>Крупнейшая порода кошек, самцы весят от 5,9 до 8,2 кг</h1><br>
+    <p>1.Майн-куна</p><br>
+    <p>Крупнейшая порода кошек, самцы весят от 5,9 до 8,2 кг</p><br>
   </body>
 </html>
