--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <hr>
     <p>1.Майн-куна</p><br>
     <p>Крупнейшая порода кошек, самцы весят от 5,9 до 8,2 кг</p><br>
+    <p>Крупнейшая порода кошек, самцы весят от 5,9 до 8,2 кг</p><br>
   </body>
 </html>
