--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <p><small>По данным 2017 год в мире насчитывается <em>41 вид</em> кошек.</small></p><br>
-    <h1><b>Я рассскажу о 3 самых больших породах!</b></h1>
+    <h1>Я рассскажу о 3 самых больших породах!</h1>
     <ol>
       <li>мейн-куна</li>
       <li>чаузи</li>
@@ -13,7 +13,6 @@
     </ol>
     <hr>
     <p>1.Майн-куна</p><br>
-    <p>Крупнейшая порода кошек, самцы весят от 5,9 до 8,2 кг</p><br>
     <p>Крупнейшая порода кошек, самцы весят от 5,9 до 8,2 кг</p><br>
   </body>
 </html>
