--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <p><small>По данным 2017 год в мире насчитывается <em>41 вид</em> кошек.</small></p><br>
-    <h1>Я рассскажу о 3 самых больших породах!</h1>
+    <p><b></b>Я рассскажу о 3 самых больших породах!</b></p>
     <ol>
       <li>мейн-куна</li>
       <li>чаузи</li>
