--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYP html>
 <html>
-  p {margin-top: 0; margin-bottom: 1.5em;}
+  p {
+    margin-top: 0.5em; /* Отступ сверху */
+    margin-bottom: 1em; /* Отступ снизу */
+   }
   <head>
     <h1><b>Кошки</b></h1><br>
   </head>
   <body>
-    <p><small>По данным 2017 год в мире насчитывается <em>41 вид</em> кошек.</small></p><br>
-    <p><b></b>Я рассскажу о 3 самых больших породах!</b></p>
+    <p><small>По данным 2017 год в мире насчитывается <em>41 вид</em> кошек.</small><br>
+    <b></b>Я рассскажу о 3 самых больших породах!</b></p>
     <ol>
       <li>мейн-куна</li>
       <li>чаузи</li>
       <li>саванну</li>
     </ol>
     <hr>
-    <p>1.Майн-куна</p><br>
-    <p>Крупнейшая порода кошек, самцы весят от 5,9 до 8,2 кг</p><br>
+    <p>1.Майн-куна<br>
+    Крупнейшая порода кошек, самцы весят от 5,9 до 8,2 кг</p><br>
   </body>
 </html>
