--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYP html>
 <html>
-  p {
-    margin-top: 0.5em; /* Отступ сверху */
-    margin-bottom: 1em; /* Отступ снизу */
+    p {
+    margin-top: 0.5em;
+    margin-bottom: 1em;
    }
   <head>
     <h1><b>Кошки</b></h1><br>
