--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1><b>Кошки</b></h1><br>
   </head>
   <body>
-    <p><style="color:green;">По данным 2017 год в мире насчитывается <em>41 вид</em> кошек.<br>
+    <p>По данным 2017 год в мире насчитывается<style="color:green;"><em>41 вид</em> кошек.<br>
     <b></b>Я рассскажу о 3 самых больших породах!</b></p>
     <ol>
       <li>мейн-куна</li>
