--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <hr>
     <p>1.Майн-куна<br>
       Крупнейшая порода кошек, самцы весят от 5,9 до 8,2 кг</p><br>
+    </hr>
+     <p>2.Чаузи<br>
+      Чаузи входит в список самых дорогих и экзотичных пород. Эта миниатюрная копия дикой кошки станет достойным спутником и сумеет запасть в душу даже заядлому любителю собак. © «Lapkins.ru» Копирование материалов запрещено</p><br>
       
   </body>
 </html>
