--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     </hr>
      <p>2.Чаузи<br>
       Чаузи входит в список самых дорогих и экзотичных пород. Эта миниатюрная копия дикой кошки станет достойным спутником и сумеет запасть в душу даже заядлому любителю собак. </p><br>
-      
+     <hr>
+    <p>3.Саванну<br>
+      Саванна является крупной кошкой. Её рост в холке достигает 60 см, а вес доходит до 15 кг.</p><br>
+    </hr>
   </body>
 </html>
