--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <hr>
     <p>1.Майн-куна<br>
       Крупнейшая порода кошек, самцы весят от 5,9 до 8,2 кг</p><br>
+    <img src="D:/имиджи/SUx182" alt="width="200" height="100">
     </hr>
     </hr>
      <p>2.Чаузи<br>
