--- a/index.html
+++ b/index.html
@@ -4,14 +4,6 @@
     margin-top: 0.5em;
     margin-bottom: 1em;
    }>
-    <h1{
-  font-size: 60pt;
-  background-repeat: repeat-x;
-  background-size: 8ch 100%;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-image: linear-gradient(to right, #57365a 0ch, Yellow 1ch, Indigo 1ch, Indigo 2ch, Blue 2ch, #2f732e 3ch, Orange 3ch, Orange 4ch, Violet 4ch, Violet 5ch, Green 5ch, Green 6ch, #5b2979 6ch, Red 7ch);
-}>
   <head>
     <h1><b>Кошки</b></h1><br>
   </head>
@@ -26,7 +18,7 @@
     <hr>
     <p>1.Майн-куна<br>
       Крупнейшая порода кошек, самцы весят от 5,9 до 8,2 кг</p><br>
-    <img src="D:/имиджи/SUx182" alt="width="200" height="100">
+    <img src="D/имиджи/SUx182" alt="width="200" height="100">
     </hr>
     <hr>
      <p>2.Чаузи<br>
