--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
     <hr>
      <p>2.Чаузи<br>
       Чаузи входит в список самых дорогих и экзотичных пород. Эта миниатюрная копия дикой кошки станет достойным спутником и сумеет запасть в душу даже заядлому любителю собак. </p><br>
-     </hr>
+      <img src="D/имиджи/SUx182" alt="width="200" height="100">
+    </hr>
     <hr>
     <p>3.Саванну<br>
       Саванна является крупной кошкой. Её рост в холке достигает 60 см, а вес доходит до 15 кг.</p><br>
+     <img src="D/имиджи/SUx182" alt="width="200" height="100">
     </hr>
   </body>
 </html>
