--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <head>
     <h1><b>Кошки</b></h1><br>
   </head>
-  <body>
-    <p>По данным 2017 год в мире насчитывается<style="color:green;"><em>41 вид</em> кошек.<br>
+  <body style=»background-color: #00FF00;»>>
+    <p>По данным 2017 год в мире насчитывается<style="color:FFFFFF;"><em>41 вид</em> кошек.<br>
     <b></b>Я рассскажу о 3 самых больших породах!</b></p>
     <ol>
       <li>мейн-куна</li>
