--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <head>
     <h1><b>Кошки</b></h1><br>
   </head>
-  <body style=»background-color: #00FF00;»>>
+  <body style=»background-color: #00FF00;»>
     <p>По данным 2017 год в мире насчитывается<style="color:FFFFFF;"><em>41 вид</em> кошек.<br>
     <b></b>Я рассскажу о 3 самых больших породах!</b></p>
     <ol>
