--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <p>1.Майн-куна<br>
       Крупнейшая порода кошек, самцы весят от 5,9 до 8,2 кг</p><br>
     <img src="aut.JPG" alt="width="200" height="100">
-    </hr>
+        <a href="https://www.figma.com/design/vERNFYYGyCzFW2zb9KA29n/Untitled?node-id=0-1&t=J9FyZfDa2BDrRZ86-1">huhhi</a>
     <hr>
      <p>2.Чаузи<br>
       Чаузи входит в список самых дорогих и экзотичных пород. Эта миниатюрная копия дикой кошки станет достойным спутником и сумеет запасть в душу даже заядлому любителю собак. </p><br>
